internet-gateway.tf
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.vpc-app.id

  tags = {
    Name = "${var.nome}-gw"
  }
}
