route-table.tf

resource "aws_route_table" "rotas-subnet-publica" {
  vpc_id = aws_vpc.vpc-app.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "${var.nome}-rotas-subnet-publica"
  }
}

resource "aws_route_table_association" "rt-publica" {
  subnet_id      = aws_subnet.subnet-publica.id
  route_table_id = aws_route_table.rotas-subnet-publica.id
}



# tabela de rotas privadas nat gateway
resource "aws_route_table" "rotas-subnet-privada" {
  vpc_id = aws_vpc.vpc-app.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat-privada.id

  }

  tags = {
    Name = "${var.nome}-rotas-subnet-privada"
  }
}

resource "aws_route_table_association" "example" {
  subnet_id      = aws_subnet.subnet-privada.id
  route_table_id = aws_route_table.rotas-subnet-privada.id
}
